[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Murad Bashirov <muradb@kaist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlmodel = "^0.0.8"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.1.1"
taskipy = "^1.10.4"
mypy = "^1.3.0"
sqlalchemy-stubs = "^0.4"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.24.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.taskipy.tasks]
start = "uvicorn api.main:app"
start-dev = "uvicorn api.main:app --reload"
lint = "./scripts/lint.sh"
test = "./scripts/test.sh"
cov-html = "./scripts/test-cov-html.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
